fix(styles): fix checkbox label wrap at contact styles

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -83,7 +83,7 @@
       line-height: 24px;
       color: $contact_primary;
     }
-    #btn_submit {
+    #btn__submit {
       width: 100%;
       background-color: $contact_btn;
       color: white;
